# smart-home-simulator

./: .gitignore  DESIGN.md  Makefile  PRODUCT.md  README.md  ROADMAP.md  pyproject.toml  start  start.cmd
docs/: architecture.md  llm_local_authoring_guide.md
examples/: minimal_scenario.json
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  tsconfig.test.json  vite.config.ts
prompts/: generate-personal-process-models-1.0.0.md  generate-scenario-1.0.0.md  generate-simulation-inputs-1.0.0.md  generate-simulation-inputs-1.1.0.md  generate-simulation-inputs-1.2.0-simplified.md  generate-simulation-inputs-1.2.0.md  generate-simulation-inputs-1.2.1-simplified.md  generate-simulation-inputs-1.2.2-simplified.md
schemas/: action-catalog-1.0.0.schema.json  action-catalog-1.0.0.schema.sha256  activity-catalog-1.0.0.schema.json  activity-catalog-1.0.0.schema.sha256  application-export-manifest-1.0.0.schema.json  application-export-manifest-1.0.0.schema.sha256  application-job-1.0.0.schema.json  application-job-1.0.0.schema.sha256  application-replay-1.0.0.schema.json  application-replay-1.0.0.schema.sha256  application-workspace-manifest-1.0.0.schema.json  application-workspace-manifest-1.0.0.schema.sha256  authoring-ingestion-report-1.0.0.schema.json  authoring-ingestion-report-1.0.0.schema.sha256  authoring-ingestion-report-1.1.0.schema.json  authoring-ingestion-report-1.1.0.schema.sha256  authoring-repair-request-1.0.0.schema.json  authoring-repair-request-1.0.0.schema.sha256  behavior-validation-report-1.0.0.schema.json  behavior-validation-report-1.0.0.schema.sha256  canonical-plan-1.0.0.schema.json  canonical-plan-1.0.0.schema.sha256  compilation-report-1.0.0.schema.json  compilation-report-1.0.0.schema.sha256  environment-validation-report-1.0.0.schema.json  environment-validation-report-1.0.0.schema.sha256  execution-trace-1.0.0.schema.json  execution-trace-1.0.0.schema.sha256  home-generation-policy-1.0.0.schema.json  home-generation-policy-1.0.0.schema.sha256  home-generation-report-1.0.0.schema.json  home-generation-report-1.0.0.schema.sha256  home-model-1.0.0.schema.json  home-model-1.0.0.schema.sha256  longitudinal-simulation-manifest-1.0.0.schema.json  longitudinal-simulation-manifest-1.0.0.schema.sha256  longitudinal-simulation-report-1.0.0.schema.json  longitudinal-simulation-report-1.0.0.schema.sha256  observable-sensor-log-1.0.0.schema.json  observable-sensor-log-1.0.0.schema.sha256  (+33 more)
tests/: conftest.py  test_application_jobs.py  test_application_replay_export.py  test_application_service.py  test_application_workspace.py  test_authoring_ingestion.py  test_authoring_preflight.py  test_batch_simulation.py  test_behavior_contract_structure.py  test_behavior_io.py  test_behavior_validation.py  test_behavioral_profile.py  test_cadence.py  test_cli.py  test_compiler.py  test_contract_structure.py  test_cross_platform_locking.py  test_day_generation.py  test_environment.py  test_environment_visualization.py  test_generation_job.py  test_habit_gates.py  test_habit_trace.py  test_habits.py  test_horizon.py  test_hybrid_guardrails.py  test_hybrid_planning.py  test_input_parser.py  test_intents.py  test_json_schema.py  test_llm_days.py  test_lmstudio.py  test_persona.py  (+16 more)
(+317 files in other folders)
