[project]
name = "smart-home-simulator"
version = "1.0.0"
description = "Validated scenarios and deterministic plans for a smart-home simulator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "ortools==9.15.6755",
  "pydantic>=2.13,<3",
  "typer>=0.27,<1",
]

[project.scripts]
smart-home-sim = "smart_home_sim.cli:app"

[dependency-groups]
dev = [
  "jsonschema>=4.25,<5",
  "pytest>=9,<10",
  "pytest-cov>=7,<8",
  "ruff>=0.15,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/smart_home_sim"]

[tool.pytest.ini_options]
addopts = "-q --cov=src/smart_home_sim --cov-report=term-missing --cov-fail-under=95"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
