[project]
name = "smart-home-simulator"
version = "1.0.0"
description = "Deterministic smart-home simulation with validated ADL models and sensor projection"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "networkx==3.6.1",
  "ortools==9.15.6755",
  "pydantic>=2.13,<3",
  "simpy==4.1.1",
  "shapely==2.1.2",
  "typer>=0.27,<1",
]

[project.scripts]
smart-home-sim = "smart_home_sim.cli:app"

[dependency-groups]
dev = [
  "jsonschema>=4.25,<5",
  "pytest>=9,<10",
  "pytest-cov>=7,<8",
  "ruff>=0.15,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/smart_home_sim"]

[tool.pytest.ini_options]
addopts = "-q --cov=src/smart_home_sim --cov-report=term-missing --cov-fail-under=95"
pythonpath = [".", "src"]
testpaths = ["tests"]

[tool.coverage.report]
precision = 2

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
